// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout component 1`] = `
<styled.div>
  <Header
    changePage={[Function]}
  />
  <Registration />
  <Footer />
</styled.div>
`;

exports[`Layout component 2`] = `
<styled.div>
  <Header
    changePage={[Function]}
  />
  <Registration />
  <Footer />
</styled.div>
`;

exports[`Layout component 3`] = `
<styled.div>
  <Header
    changePage={[Function]}
  />
  <DeleteAccount />
  <Footer />
</styled.div>
`;

exports[`Layout component 4`] = `
<styled.div>
  <Header
    changePage={[Function]}
  />
  <Contact />
  <Footer />
</styled.div>
`;
